--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -33,11 +33,12 @@ header {
    height: 800px;
    min-height: 500px;
    width: 100%;
-   background: #161415 url(../images/header-background.jpg) no-repeat top center;
+   background: #161415 url(../images/aviation3.jpg) no-repeat top center;
    background-size: cover !important;
 	-webkit-background-size: cover !important;
    text-align: center;
    overflow: hidden;
+   opacity: .9;
 }
 
 /* vertically center banner section */
