--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -652,16 +652,16 @@ call-to-action .button {
    background-attachment: fixed;
 
    position: relative;
-   min-height: 200px;
+   min-height: 150px;
    width: 100%;
    overflow: hidden;
 }
 #testimonials .text-container {
-   padding-top: 96px;
-   padding-bottom: 66px;
+   padding-top: 76px;
+   padding-bottom: 36px;
 }
 #testimonials h1 {
-   font: 18px/24px 'opensans-bold', sans-serif;
+   font: 14px/20px 'opensans-bold', sans-serif;
    text-transform: uppercase;
    letter-spacing: 3px;
    color: #fff;
@@ -672,7 +672,7 @@ call-to-action .button {
    font-family: 'FontAwesome';
    content: "\f10d";
 	padding-right: 10px;
-	font-size: 72px;
+	font-size: 50px;
    line-height: 72px;
    text-align: left;
    float: left;
@@ -812,14 +812,14 @@ call-to-action .button {
    color: #EBEEEE;
    margin-bottom: 6px;
 }
-#contact h1 span { display: none; }
+#contact h1 span
 #contact h1:before {
    font-family: 'FontAwesome';
    content: "\f0e0";
 	padding-right: 10px;
 	font-size: 72px;
    line-height: 72px;
-   text-align: left;
+   text-align: center;
    float: left;
    color: #ebeeee;
 }
